# ns3-v2x-scheduling

./: CMakeLists.txt  README.md  run_test_script.sh
contrib/: .gitignore  CMakeLists.txt
contrib/nr/: CMakeLists.txt
contrib/nr/examples/: CMakeLists.txt
contrib/nr/examples/nr-v2x-examples/: cttc-nr-v2x-demo-simple.cc  nr-v2x-test.cc  nr-v2x-west-to-east-highway.cc  ue-mac-pscch-tx-output-stats.cc  ue-mac-pssch-tx-output-stats.cc  ue-phy-pscch-rx-output-stats.cc  ue-v2x-scheduling-xapp-stats.cc  (+1 more)
contrib/nr/helper/: nr-bearer-stats-calculator.cc  nr-bearer-stats-calculator.h  nr-bearer-stats-connector.cc  nr-bearer-stats-simple.cc  nr-bearer-stats-simple.h  nr-helper.cc  nr-helper.h  parameters-config.cc  parameters-config.h
contrib/nr/model/: nr-gnb-net-device.cc  nr-gnb-net-device.h  nr-sl-bwp-manager-ue.cc  nr-sl-bwp-manager-ue.h  nr-sl-mac-pdu-tag.cc  nr-sl-mac-pdu-tag.h  nr-sl-phy-mac-common.cc  nr-sl-phy-mac-common.h  nr-sl-sci-f1a-header.cc  nr-sl-sci-f1a-header.h  nr-sl-ue-mac-harq.cc  nr-sl-ue-mac-harq.h  nr-ue-mac.cc  nr-ue-mac.h  nr-ue-phy.cc  nr-ue-phy.h
contrib/oran-interface/: CMakeLists.txt
contrib/oran-interface/examples/: CMakeLists.txt  handover-control-message.cc
contrib/oran-interface/helper/: lte-indication-message-helper.cc  lte-indication-message-helper.h  mmwave-indication-message-helper.cc  mmwave-indication-message-helper.h
contrib/oran-interface/model/: asn1c-types.cc  asn1c-types.h  kpm-indication.cc  kpm-indication.h  oran-interface.cc  oran-interface.h  ric-control-message.cc  ric-control-message.h
src/: CMakeLists.txt
(+79 files in other folders)
